完成基本案例和说明文档